# Functors

./: .gitmodules  CMakeLists.txt  README.md
find-last/: find_last.h
fold/: fold.h  test.cpp
functors/: functors.h  readme.md
local-max/: local_max.h  readme.md  test.cpp
partition/: partition.h
remove-if/: .tester.json  CMakeLists.txt  readme.md  remove_if.h  test.cpp
tools/: fix-marks.py  manage-submits.py
tools/crashme/: crashme.socket  crashme@.service  master.py
tools/ctf/: Makefile  ctf.conf  ctf.service  gdoc.py  web.py
tools/ctf/static/: style.css
tools/ctf/templates/: base.html  layout.html  signin.html  submit.html  tasks.html
util/: util.h
